add statistics apis
